--- a/CodecellComponent.Blazor/CodecellComponent.Blazor.csproj
+++ b/CodecellComponent.Blazor/CodecellComponent.Blazor.csproj
@@ -12,9 +12,16 @@
 		<Description>Component Collection for Blazor</Description>
 		<PackageIcon>logo.png</PackageIcon>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageProjectUrl>https://github.com/codecellir/Codecell.Blazor.Components</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/codecellir/Codecell.Blazor.Components</RepositoryUrl>
+		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Include="..\LICENSE.txt">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	  <None Include="..\logo.png">
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
