--- a/Codecell.Component.Blazor/Codecell.Component.Blazor.csproj
+++ b/Codecell.Component.Blazor/Codecell.Component.Blazor.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Title>Cool Components for Blazor</Title>
-		<Version>0.3.1</Version>
+		<Version>0.4.0</Version>
 		<Authors>Sohrab Gheisari</Authors>
 		<Company>codecell.ir</Company>
 		<PackageTags>blazor,picker,persiandatePicker,datePicker</PackageTags>
@@ -42,8 +42,12 @@
 		<SupportedPlatform Include="browser" />
 	</ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.8" />
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="$(DotNet8Version)" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="$(DotNet9Version)" />
 	</ItemGroup>
 
 </Project>
